# phase_II

./: .gitignore  .mcp.json  package-lock.json  package.json  test_task_creation.py  test_task_retrieval.py  test_task_update.py
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  add_due_date_column.py  init_db.py  pyproject.toml
backend/src/: __init__.py  auth.py  config.py  crud.py  database.py  exceptions.py  main.py  models.py  responses.py  schemas.py  seed.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_config.py  test_crud.py  test_database.py  test_exceptions.py  test_models.py  test_responses.py  test_schemas.py
frontend/: .env.example  CLAUDE.md  README.md  debug-api.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test_token.txt
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  mock-auth.ts  utils.ts
frontend/src/types/: auth.ts  task.ts
history/prompts/auth/: 2-implement-backend-auth-routes.green.prompt.md
history/prompts/backend-api-core/: 1-create-backend-api-spec.spec.prompt.md  2-create-backend-implementation-plan.plan.prompt.md  3-generate-backend-task-list.tasks.prompt.md  4-implement-sprint1-infrastructure.green.prompt.md  (+4 more)
specs/api/: backend-core.md  backend-core.tasks.md
specs/api/plan/: plan.md  (+3 more)
specs/ui/: dashboard-feature.md  dashboard-feature.plan.md  dashboard-feature.tasks.md  frontend-core.md  frontend-core.plan.md  frontend-core.tasks.md  molecules.md  plan.md
(+67 files in other folders)
